--- a/index.html
+++ b/index.html
@@ -1,1 +1,201 @@
-Hello World
+<!DOCTYPE html>
+<html lang="en" manifest="">
+<head>
+<meta charset="utf-8" />
+<title>Checklist</title>
+
+<!-- Meta Viewport -->
+<meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1, user-scalable=no" />
+
+<!-- App info -->
+<meta name="description" content="Checklist is simple mobile web app for creating quick to-do lists." />
+<meta name="author" content="Alex Gibson" />
+
+<!-- Canonical URL -->
+<link rel="canonical" href="http://alxgbsn.co.uk/checklist/" />
+
+<!-- iOS Web App home screen title -->
+<meta name="apple-mobile-web-app-title" content="Checklist">
+
+<!-- iOS prevent tel number format detection -->
+<meta name="format-detection" content="telephone=no" />
+
+<!-- Firefox OS status bar theme color -->
+<meta name="theme-color" content="#df6f14" />
+
+<link rel="stylesheet" href="dist/css/styles.css" />
+
+<script src="dist/js/app.js"></script>
+
+<!-- For non-Retina iPhone, iPod Touch, and Android 2.1+ devices: -->
+<link rel="apple-touch-icon-precomposed" href="images/ios-app-icon-57.png">
+
+<!-- For the iPad mini and the first- and second-generation iPad on iOS ≤ 6: -->
+<link rel="apple-touch-icon-precomposed" sizes="72x72" href="images/ios-app-icon-72.png">
+
+<!-- For the iPad mini and the first- and second-generation iPad on iOS ≥ 7: -->
+<link rel="apple-touch-icon-precomposed" sizes="76x76" href="images/ios-app-icon-76.png">
+
+<!-- For iPhone with high-resolution Retina display running iOS ≤ 6: -->
+<link rel="apple-touch-icon-precomposed" sizes="114x114" href="images/ios-app-icon-114.png">
+
+<!-- For iPhone with high-resolution Retina display running iOS ≥ 7: -->
+<link rel="apple-touch-icon-precomposed" sizes="120x120" href="images/ios-app-icon-120.png">
+
+<!-- For iPad with high-resolution Retina display running iOS ≤ 6: -->
+<link rel="apple-touch-icon-precomposed" sizes="144x144" href="images/ios-app-icon-144.png">
+
+<!-- For iPad with high-resolution Retina display running iOS ≥ 7: -->
+<link rel="apple-touch-icon-precomposed" sizes="152x152" href="images/ios-app-icon-152.png">
+
+<!-- Chrome v31+ for Android -->
+<link rel="icon" sizes="196x196" href="images/app-icon-196.png">
+
+<!-- Google Analytics -->
+<script>
+(function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
+(i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),
+m=s.getElementsByTagName(o)[0];a.async=1;a.src=g;m.parentNode.insertBefore(a,m)
+})(window,document,'script','//www.google-analytics.com/analytics.js','ga');
+
+ga('create', 'UA-33263279-1', 'auto');  // Replace with your property ID.
+ga('send', 'pageview');
+
+</script>
+<!-- End Google Analytics -->
+</head>
+
+<body>
+<main role="main" id="app-view"></main>
+
+<!-- Empty list template -->
+<script type="text/template" id="empty-list-template">
+  <% if (total === 0) { %>
+    <p>Add an item to get started.</p>
+  <% } %>
+</script>
+
+<!-- List template -->
+<script type="text/template" id="list-template">
+  <header>
+    <h1>Checklist</h1>
+    <div id="toolbar"></div>
+  </header>
+  <div id="new-item-bar">
+    <input type="text" id="new-item-name" placeholder="Add an item&hellip;">
+  </div>
+  <div id="content">
+    <div id="todo-stats"></div>
+    <ul id="todo-list"></ul>
+    <div id="get-started"></div>
+  </div>
+</script>
+
+<!-- List item template -->
+<script type="text/template" id="item-template">
+  <input id="item-<%= order %>" class="check" type="checkbox" <%= done ? 'checked="checked"' : '' %> />
+  <label for="item-<%= order %>" class="item-text <%= done ? 'done' : '' %> <%= priority === true ? 'high' : '' %>"></label>
+  <button type="button" class="edit">Edit item</button>
+</script>
+
+<!-- Completed / remaining bar template -->
+<script type="text/template" id="totals-template">
+  <% if (total) { %>
+    <span id="total-value">Completed: <%= done %></span>
+    <span id="remaining-value">Remaining: <%= remaining %></span>
+  <% } %>
+</script>
+
+<!-- Settings menu button template -->
+<script type="text/template" id="toolbar-template">
+  <% if (total) { %>
+    <button type="button" class="edit-list">Edit list</div>
+  <% } %>
+</script>
+
+<!-- Edit template -->
+<script type="text/template" id="edit-template">
+  <header>
+    <h1></h1>
+  </header>
+  <ul id="edit-item-list">
+    <li class="primary">
+      <label id="edit-field-label" for="edit-field">Item name:</label>
+      <input type="text" id="edit-field" placeholder="Item name&hellip;" value="<%= text %>"/>
+    </li>
+    <li>
+      <input id="edit-completed" type="checkbox" <%= done ? 'checked="checked"' : '' %> />
+      <label id="completed-label" for="edit-completed">Completed</label>
+    </li>
+    <li>
+      <input type="checkbox" id="priority" <%= priority === true ? 'checked="checked"' : '' %> />
+      <label id="priority-label" for="priority">High priority</label>
+    </li>
+  </ul>
+  <div class="notes-container">
+    <label for="notes">Notes:</label>
+    <textarea id="notes" placeholder="Additional info&hellip;"><%= notes %></textarea>
+  </div>
+  <div class="control-container" id="reminder">
+    <fieldset>
+      <legend>Set reminder</legend>
+      <ul>
+        <li>
+          <label id="reminder-date-label" for="reminder-date">Date</label>
+          <input id="reminder-date" type="date" value="<%= date %>" />
+        </li>
+        <li>
+          <label id="reminder-time-label" for="reminder-time">Time</label>
+          <input id="reminder-time" type="time" value="<%= time %>" />
+        </li>
+        <li>
+          <label id="reminder-label" for="reminder">Notification</label>
+          <select id="reminder-offset">
+            <option value="-1" <%= reminderOffset === -1 ? 'selected="selected"' : '' %> >None</option>
+            <option value="0" <%= reminderOffset === 0 ? 'selected="selected"' : '' %> >At time of event</option>
+            <option value="5" <%= reminderOffset === 5 ? 'selected="selected"' : '' %>>5 minutes before</option>
+            <option value="15" <%= reminderOffset === 15 ? 'selected="selected"' : '' %>>15 minutes before</option>
+            <option value="30" <%= reminderOffset === 30 ? 'selected="selected"' : '' %>>30 minutes before</option>
+            <option value="60" <%= reminderOffset === 60 ? 'selected="selected"' : '' %>>1 hour before</option>
+            <option value="120" <%= reminderOffset === 120 ? 'selected="selected"' : '' %>>2 hours before</option>
+            <option value="1440" <%= reminderOffset === 1440 ? 'selected="selected"' : '' %>>1 day before</option>
+          </select>
+        </li>
+      </ul>
+    </fieldset>
+  </div>
+  <div class="control-container">
+    <button id="save-edit" type="button">Done</button>
+    <button id="delete" class="warning" type="button">Delete item</button>
+  </div>
+</script>
+
+<!-- Settings template -->
+<script type="text/template" id="edit-list-template">
+  <header>
+    <h1>Edit list</h1>
+  </header>
+  <ul id="edit-list-view">
+    <li>
+      <input type="radio" id="delete-completed" name="setting" />
+      <label id="delete-completed-label" for="delete-completed">Delete completed</label>
+    </li>
+    <li>
+      <input type="radio" id="delete-all" name="setting" />
+      <label id="delete-all-label" for="delete-all">Delete all</label>
+    </li>
+    <li>
+      <input type="radio" id="uncheck-all" name="setting" />
+      <label id="check-all-label" for="uncheck-all">Uncheck all</label>
+    </li>
+  </ul>
+  <div class="control-container">
+    <button type="button" id="close-edit-list">Done</button>
+  </div>
+  <div class="share">
+    <a href="mailto:" id="maillink">Email list</a>
+  </div>
+</script>
+
+</body>
+</html>
